--- a/djangonautic/articles/templates/articles/articles_list.html
+++ b/djangonautic/articles/templates/articles/articles_list.html
@@ -1,24 +1,15 @@
-{% load static from static %}
+{% extends 'base_layout.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Articles_List</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-<body>
+{% block content %}
     <h1>This is the Articles List</h1>
     <p>Contains the articles</p>
     <div class="articles">
         {% for article in articles %}
         <div class="article">
-            <h2><a href="#"> {{article.title}}</a></h2>
+            <h2><a href="{% url 'articles:detail' slug=article.slug %}"> {{article.title}}</a></h2>
             <p>{{article.snippet}}</p>
             <p>{{article.date}}</p>
         </div>
         {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
